@@ -1,5 +1,6 @@
 New in TeachingDemos version 2.7
 
+* fixed several functions that depend on tcltk but did not load it.
 
 New in TeachingDemos version 2.6
 
